--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'com.scottyab:aes-crypto:0.0.3'
+    compile 'com.firebaseui:firebase-ui:0.2.0'
 }
